MDEV-5070 - EXPLAIN INSERT ... SELECT crashes on 10.0-base-explain-slowquerylog - Add EXPLAIN output print out for INSERT/REPLACE ... SELECT